<resources>
    <string name="app_name">Engineering Calculator</string>
    <string name="clean">C</string>
    <string name="sign">+/-</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="_2nd">2^nd</string>
    <string name="x2">x²</string>
    <string name="x3">x³</string>
    <string name="xy">x^y</string>
    <string name="ex">e^x</string>
    <string name="_10X">10^x</string>
    <string name="closing_bracket">)</string>
    <string name="opening_bracket">(</string>
    <string name="m_minus">m-</string>
    <string name="m_plus">m+</string>
    <string name="mr">mr</string>
    <string name="mc">mc</string>
    <string name="_1_x">1/x</string>
    <string name="rad">Rad</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="rand">Rand</string>
    <string name="ee">EE</string>
    <string name="e">e</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="x">x!</string>
    <string name="ln">ln</string>
    <string name="log10">log</string>
    <string name="_2nx">²√x</string>
    <string name="_3nx">³√x</string>
    <string name="ynx">y√x</string>
    <string name="pi">π</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="ok">Ok</string>
    <string name="input_image">Введите название файла</string>
</resources>
